--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-clipboard-toast",
-  "version": "0.1.0",
-  "description": "Clipboard with toast",
+  "version": "1.0.0",
+  "description": "React Native Clipboard API with Animated toast message component",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
@@ -149,5 +149,9 @@
         }
       ]
     ]
+  },
+  "dependencies": {
+    "prop-types": "^15.7.2",
+    "react-native-root-toast": "^3.2.1"
   }
 }
